# km-mfc

./: .gitignore  README.md  pyproject.toml  requirements.txt
km_mfc/: ERP_analysis.py  __init__.py  __main__.py  current_experiments  current_experiments.py  json_to_excel.py  logger.py  loggerERP_100s.py  loggerERP_10s.py  loggerERP_1s.py  loggerOC.py  loggerSwitch.py  node_advanced_usage.py  node_basic_usage.py  show_voltage.py  teros.ino
km_mfc/node/: __init__.py  main.py
km_mfc/node/adapters/: __init__.py  base_adapter.py  logging_adapter.py  queue_adapter.py
km_mfc/node/config/: __init__.py  hardware_config.py
km_mfc/node/drivers/: __init__.py  ad5272_driver.py  base_driver.py  mcp3564_driver.py  serial_driver.py
km_mfc/node/examples/: advanced_usage.py  basic_usage.py
km_mfc/node/management/: __init__.py  sensor_management.py
km_mfc/node/sensors/: __init__.py  base_sensor.py  pcb_sensor.py  teros_arduino_sensor.py
km_mfc/node/utils/: __init__.py  serial_utils.py
